# MatSlide

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md  imgui.ini
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: main.cpp
src/core/: Application.cpp  Application.hpp  Camera.hpp  Event.hpp  ExrLoader.cpp  ExrLoader.hpp  Geometry.hpp  MaterialParameters.hpp  ObjLoader.hpp  ParameterManager.cpp  ParameterManager.hpp  ShaderParser.hpp  System.hpp
src/inference/: BrdfProvider.cpp  BrdfProvider.hpp  ONNXRuntimeWrapper.cpp  ONNXRuntimeWrapper.hpp
src/rendering/: BackgroundPass.cpp  BackgroundPass.hpp  EnvMapPass.cpp  EnvMapPass.hpp  IblMerlPass.cpp  IblMerlPass.hpp  MerlPass.cpp  MerlPass.hpp  MeshPass.cpp  MeshPass.hpp  RenderPass.hpp
src/shader/: envmap.frag  envmap.vert  ibl_display.frag  ibl_display.vert  ibl_merl.frag  ibl_merl.vert  ibl_merl_depth.frag  ibl_merl_exp.frag  merl.frag  merl.vert  v1.frag
src/utils/: convert_to_merl.cpp  infer_to_binary.cpp
